src/test/compile-fail/main-wrong-type-2.rs
// xfail-stage0
// error-pattern:Wrong type in main function: found fn() -> char
fn main() -> char {
}
